parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-12.snap
---
source: parser/src/lexer/mod.rs
description: "@"
---
[
    Token {
        kind: MatrixMul,
        value: None,
        start: 0,
        end: 1,
    },
]
