parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-14.snap
---
source: parser/src/lexer/lexer.rs
description: "\\"
---
[
    Token {
        kind: BackSlash,
        value: None,
        start: 0,
        end: 1,
    },
]
