parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-15.snap
---
source: parser/src/lexer/mod.rs
description: "#"
---
[
    Token {
        kind: Comment,
        value: Str(
            "#",
        ),
        start: 0,
        end: 1,
    },
]
