parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-17.snap
---
source: parser/src/lexer/lexer.rs
description: "?"
---
[
    Token {
        kind: QuestionMark,
        value: None,
        start: 0,
        end: 1,
    },
]
