parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-19.snap
---
source: parser/src/lexer/mod.rs
description: "->"
---
[
    Token {
        kind: Arrow,
        value: None,
        start: 0,
        end: 2,
    },
]
