parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-2.snap
---
source: parser/src/lexer/mod.rs
description: a + b
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Plus,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 4,
        end: 5,
    },
]
