parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-20.snap
---
source: parser/src/lexer/lexer.rs
description: +=
---
[
    Token {
        kind: AddAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
